Updated questions with textbooks
Questions and text boxes will appear under this web app page. 
Still need to: 
- Store data from text box to user profile
- Create pull down for hints/tips

--- a/business_app/app/interviewQA.html
+++ b/business_app/app/interviewQA.html
@@ -7,15 +7,73 @@
 face interview and sometimes a phone interview. Save your responses and edit them as you go so they can evolve into thought
 through and sophisticated answers. If you're stuck, feel free to check out the helpful tips.</p>
 
+<!-- The below statement is an attempt to create a link that show the interview question tips <!-- 
+
+<!-- <a href="LINKHERE">TIPS</a> <!-- 
+    
 <br>
 
 <p>Tell me about yourself.</p>
 <form>
 <input type="text">
 </form>
+  
+  <p>What are some of your short and long term goals?</p>
+<form>
+<input type="text">
+</form>
+  
+  <p>Why should we hire you? What do you bring to the table?</p>
+<form>
+<input type="text">
+</form>
+  
+  <p>Why do you want to work here? What do you know about this company and position?</p>
+<form>
+<input type="text">
+</form>
+  
+  <p>What are you expecting as far as compensation?</p>
+<form>
+<input type="text">
+</form>
+  
+  <p>What are your strengths and weaknesses?</p>
+<form>
+<input type="text">
+</form>
+  
+  <p>Why do you want to leave your current job? Why did you leave your previous job?</p>
+<form>
+<input type="text">
+</form>
 
 
-
+ <p>How would your previous/current boss or coworkers describe you?</p>
+<form>
+<input type="text">
+</form>
+  
+  <p>Tell me about a time you were in the midst of a stressful situation, and how did you deal with it?</p>
+<form>
+<input type="text">
+</form>
+  
+  <p>What are your goals for this position?</p>
+<form>
+<input type="text">
+</form>
+  
+  <p>Tell me about a time you disagreed with a decision that was make at work and how did you deal with it?</p>
+<form>
+<input type="text">
+</form>
+  
+  <p>Do you have any questions for us?</p>
+<form>
+<input type="text">
+</form>
+  
 
 </body>
 </html>
