--- a/business_app/app/interviewQA.html
+++ b/business_app/app/interviewQA.html
@@ -7,9 +7,9 @@
 face interview and sometimes a phone interview. Save your responses and edit them as you go so they can evolve into thought
 through and sophisticated answers. If you're stuck, feel free to check out the helpful tips.</p>
 
-<!-- The below statement is an attempt to create a link that show the interview question tips <!-- 
+<!-- The below statement is an attempt to create a link that show the interview question tips --> 
 
-<!-- <a href="LINKHERE">TIPS</a> <!-- 
+<!-- <a href="LINKHERE">TIPS</a> -->
     
 <br>
 
