--- a/business_app/app/ClothingDropDown.html
+++ b/business_app/app/ClothingDropDown.html
@@ -1,4 +1,7 @@
- <div class="dropdown">
+{% extends "header.html" %}
+{% block content %}
+
+<div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Dropdown</button>
   <div id="myDropdown" class="dropdown-content">
     <a href="#">Link 1</a>
@@ -6,3 +9,5 @@
     <a href="#">Link 3</a>
   </div>
 </div> 
+
+{% end block%}
