--- a/business_app/app/interviewQA.html
+++ b/business_app/app/interviewQA.html
@@ -1,3 +1,7 @@
+
+{%extends "index.html" %}
+(% block content %}
+
 <!DOCTYPE html>
 <html>
 <body>
@@ -76,3 +80,5 @@ through and sophisticated answers. If you're stuck, feel free to check out the h
 
 </body>
 </html>
+
+{% endblock} 
