--- a/business_app/app/interviewQA.html
+++ b/business_app/app/interviewQA.html
@@ -5,6 +5,14 @@
 <!DOCTYPE html>
 <html>
 <body>
+    
+<html>
+  <head>
+    <title>InterviewQ&A</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css">
+    <link href="../app/interviewQA.css" rel="stylesheet">
+</head>
 
 <h1>InterviewIQ</h1>
 <p>The following are common interview questions that many interviewers use to get to know their applicants during a face to
